tests/snapshots/help/completions.snap
---
source: tests/cli/snapshots.rs
---
Generate shell completion script (bash, zsh, fish)

Usage: vendo completions [OPTIONS] [shell]

Arguments:
  [shell]  [possible values: bash, zsh, fish]

Options:
      --json  Output raw JSON
  -h, --help  Print help

Global options:
      --profile <name>  Use a specific account profile (or set VENDO_PROFILE)
      --debug           Enable verbose request diagnostics

Examples:
  $ vendo completions bash
  $ vendo completions zsh
  $ vendo completions fish
