tests/snapshots/help/help.snap
---
source: tests/cli/snapshots.rs
---
Print this message or the help of the given subcommand(s)

Usage: vendo help [COMMAND]...

Arguments:
  [COMMAND]...  Print help for the subcommand(s)
