tests/snapshots/help/logout.snap
---
source: tests/cli/snapshots.rs
---
Remove stored credentials

Usage: vendo logout [OPTIONS]

Options:
      --all   Remove every saved profile, not just the active one
  -y, --yes   Skip the confirmation prompt for --all
      --json  Output raw JSON
  -h, --help  Print help

Global options:
      --profile <name>  Use a specific account profile (or set VENDO_PROFILE)
      --debug           Enable verbose request diagnostics

Examples:
  $ vendo logout
  $ vendo logout --all
  $ vendo logout --all --yes
