tests/snapshots/help/status.snap
---
source: tests/cli/snapshots.rs
---
Account health overview

Usage: vendo status [OPTIONS]

Options:
      --json  Output raw JSON
  -h, --help  Print help

Global options:
      --profile <name>  Use a specific account profile (or set VENDO_PROFILE)
      --debug           Enable verbose request diagnostics

Examples:
  $ vendo status
  $ vendo status --json
